# bgtorrent-observer

./: .gitignore  LICENSE.md  Makefile  README.md  pyproject.toml  requirements.txt
notebook_pairs/pys/: Untitled.py
src/: crontab.config_sample  files_lookup.py  mv_ready.py  retrive_episodes.config_example  retrive_episodes.py  torrent_download.py
src/bgtorrent_observer/: observer.py  p2pbg.py
tests/observer/: test_parsing_tracker_credentials.py
tests/observer/data/: observer.config
tests/sample/: test_zero_function.py
