[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bgtorrent_observer"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    'requests', 'beautifulsoup4'
]

[tool.setuptools.package-data]
"bgtorrent_observer" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
